update public url

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
     admin:
       context-path: admin
       ui:
-        public-url: https://gundmann.dk
+        public-url: https://gundmann.dk/admin
   cloud:
     config:
       uri: http://192.168.1.100:5678
